Added Background image to homepage

--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Home.css">
     <title>Home</title>
 </head>
-<body>
+<body style=" background-image: url(HomeBackground.jpg);">
     <!-- Link to the about page -->
     <div class="menu">
         <a href ="about.html">About</a>
