Added rudimentary code to each html page

--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Home.css">
@@ -15,7 +17,7 @@
     <!-- This is the title of the website -->
     <h1>All About Eddie</h1>
     <h2>Early Life</h2>
-    <p>Our young hero's (or villains depending on who you ask) story starts in the humble of streets of a small town in Kenya called Eldoret.</p>
-    <p>The image this text is currently residing on is actual somewhat similar to where he grew up </p>
+    <p class="p">Our young hero's (or villains depending on who you ask) story starts in the humble of streets of a small town in Kenya called Eldoret.</p>
+    <p class="p">The image this text is currently residing on is actual somewhat similar to where he grew up </p>
 </body>
 </html>
