Updated menu bar css

--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="Home.css">
     <title>Home</title>
 </head>
-<body style=" background-image: url(HomeBackground.jpg);">
-    <!-- Link to the about page -->
-    <div class="menu">
-        <a href ="about.html">About</a>
-        <p>Test</p>
-    </div>
-    <!-- This is the title of the website -->
-    <h1>All About Eddie</h1>
-    <h2>Early Life</h2>
-    <p class="p">Our young hero's (or villains depending on who you ask) story starts in the humble of streets of a small town in Kenya called Eldoret.</p>
-    <p class="p">The image this text is currently residing on is actual somewhat similar to where he grew up </p>
+<body class="body">
+        <!-- This is the title of the website -->
+    <h1>Sleipnir Cars
+        <!-- Link to the about page -->
+        <ul class="navigation">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="OurTeam.html">Our Team</a></li>
+        </ul>
+    </h1>
+    <h2 class="h2">Let Us Get You Into Your Dream Car!</h2>
+    <p class="p">Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
 </body>
 </html>
