--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -9,7 +9,8 @@
     <title>Home</title>
 </head>
 <body class="body">
-        <!-- This is the title of the website -->
+    <header class="header">
+                <!-- This is the title of the website -->
     <h1>Sleipnir Cars
         <!-- Link to the about page -->
         <ul class="navigation">
@@ -18,6 +19,8 @@
             <li><a href="OurTeam.html">Our Team</a></li>
         </ul>
     </h1>
+    </header>
+
     <h2 class="h2">Let Us Get You Into Your Dream Car!</h2>
     <p class="p">Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
 </body>
