--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -6,21 +6,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Home.css">
+    <!-- This is the title of the website -->
     <title>Home</title>
 </head>
 <body class="body">
     <header class="header">
-                <!-- This is the title of the website -->
-    <h1>Sleipnir Cars
+                
         <!-- Link to the about page -->
         <ul class="navigation">
+            <img src="Images/Logo.png">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="OurTeam.html">Our Team</a></li>
         </ul>
-    </h1>
     </header>
-
+    <h1>Sleipnir Cars</h1>
     <h2 class="h2">Let Us Get You Into Your Dream Car!</h2>
     <p class="p">Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
 </body>
