Styled dropdown menu

--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -14,10 +14,19 @@
                 
         <!-- Link to the about page -->
         <ul class="navigation">
-            <img src="Images/Logo.png">
+            <img src="Images/Logo.png" class="logo">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="OurTeam.html">Our Team</a></li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Cars</a>
+                <div class="dropdown-content">
+                    <a href="#">Mercedes Benz</a>
+                    <a href="#">Rolls Royce</a>
+                    <a href="#">Toyota</a>
+                    <a href="#">Lotus</a>
+                </div>
+            </li>
         </ul>
     </header>
     <h1>Sleipnir Cars</h1>
