--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -10,11 +10,11 @@
     <title>Home</title>
 </head>
 <body class="body">
-    <header class="header">
-                
+    <header class="header"> 
         <!-- Link to the about page -->
-        <ul class="navigation">
-            <img src="Images/Logo.png" class="logo">
+        <!--
+            <img src="Images/Logo.png" class="logo">  
+            <ul class="navigation">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="OurTeam.html">Our Team</a></li>
@@ -28,9 +28,17 @@
                 </div>
             </li>
         </ul>
-    </header>
+    </div>
+    </header> -->
     <h1>Sleipnir Cars</h1>
     <h2 class="h2">Let Us Get You Into Your Dream Car!</h2>
     <p class="p">Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
+<footer>
+    <ul class = "footer">
+        <li><a href="index.html">Home</a></li>
+        <li>About Us</li>
+        <li>FAQ</li>
+    </ul>
+</footer>
 </body>
 </html>
