--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -10,26 +10,16 @@
     <title>Home</title>
 </head>
 <body class="body">
-    <header class="header"> 
-        <!-- Link to the about page -->
-        <!--
-            <img src="Images/Logo.png" class="logo">  
-            <ul class="navigation">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="OurTeam.html">Our Team</a></li>
-            <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Cars</a>
-                <div class="dropdown-content">
-                    <a href="#">Mercedes Benz</a>
-                    <a href="#">Rolls Royce</a>
-                    <a href="#">Toyota</a>
-                    <a href="#">Lotus</a>
-                </div>
-            </li>
-        </ul>
-    </div>
-    </header> -->
+<div id="sideMenu" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">Home</a>
+    <a href="#">Cars</a>
+    <a href="#">The Team</a>
+    <a href="#">Contact Us</a>
+</div>
+<!-- Use this to open the side menu -->
+    <span onclick="openNav()">Open</span>
+    <div id="main">
     <h1>Sleipnir Cars</h1>
     <h2 class="h2">Let Us Get You Into Your Dream Car!</h2>
     <p class="p">Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
@@ -40,5 +30,6 @@
         <li>FAQ</li>
     </ul>
 </footer>
+</div>
 </body>
 </html>
