--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Home.css">
+    <script src="Home.js"></script>
     <!-- This is the title of the website -->
     <title>Home</title>
 </head>
