--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -6,12 +6,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Home.css">
-    <script src="Home.js"></script>
+    <script>
+        //Width of side nav
+        function openNav()
+        {
+            document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+            document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+        }
+        // Closing width of side nav
+        function closeNav()
+        {
+            document.getElementById("mySidenav").style.width = "0";
+            document.getElementById("main").style.marginLeft = "0";
+            document.body.style.backgroundColor = "white";
+        }
+
+    </script>
     <!-- This is the title of the website -->
     <title>Home</title>
 </head>
 <body class="body">
-<div id="sideMenu" class="sidenav">
+<div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="#">Home</a>
     <a href="#">Cars</a>
@@ -19,8 +35,7 @@
     <a href="#">Contact Us</a>
 </div>
 <!-- Use this to open the side menu -->
-    <span onclick="openNav()">Open</span>
-    <div id="main">
+<span onclick="openNav()" style="align-items: end;">open</span>
     <h1>Sleipnir Cars</h1>
     <h2 class="h2">Let Us Get You Into Your Dream Car!</h2>
     <p class="p">Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
@@ -31,6 +46,5 @@
         <li>FAQ</li>
     </ul>
 </footer>
-</div>
 </body>
 </html>
