Added hamburger icon

--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -5,7 +5,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="FirstWebsite/Home.css">
     <script>
         //Width of side nav
         function openNav()
@@ -27,6 +27,9 @@
     <title>Home</title>
 </head>
 <body class="body">
+    <div onclick="openNav()"></div>
+    <div onclick="openNav()"></div>
+    <div onclick="openNav()"></div>
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="#">Home</a>
@@ -35,7 +38,6 @@
     <a href="#">Contact Us</a>
 </div>
 <!-- Use this to open the side menu -->
-<span onclick="openNav()" style="align-items: end;">open</span>
     <h1>Sleipnir Cars</h1>
     <h2 class="h2">Let Us Get You Into Your Dream Car!</h2>
     <p class="p">Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
