--- a/FirstWebsite/index.html
+++ b/FirstWebsite/index.html
@@ -5,7 +5,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="FirstWebsite/Home.css">
+    <link rel="stylesheet" href="Home.css">
     <script>
         //Width of side nav
         function openNav()
@@ -39,8 +39,7 @@
 </div>
 <!-- Use this to open the side menu -->
     <h1>Sleipnir Cars</h1>
-    <h2 class="h2">Let Us Get You Into Your Dream Car!</h2>
-    <p class="p">Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
+    <p>Our team is guaranteed to make sure that you drive off the lot in your dream! Welcome and see the amazing deals we have for you!</p>
 <footer>
     <ul class = "footer">
         <li><a href="index.html">Home</a></li>
