--- a/FirstWebsite/contact.html
+++ b/FirstWebsite/contact.html
@@ -6,12 +6,8 @@
   <title>Contact Us</title>
 </head>
 <body>
-  <h1>Contact Us</h1>
-  <p>You can reach us at:</p>
-  <ul>
-    <li>Email: eddiekrr@gmail.com</li>
-    <li>Phone: 123-456-7890</li>
-    <li>Address: 123 Main Street, City, State, ZIP</li>
-  </ul>
+  <div class="container">
+    
+  </div>
 </body>
 </html>
